Closed Bug 843490 Opened 11 years ago Closed 11 years ago

Fix a simple clang 3.2 compile error in gfx/gl/SurfaceStream.cpp.

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

Details

Attachments

(1 file)

With clang 3.2 on Linux I get this compile error:

  /home/njn/moz/mi7/gfx/gl/SurfaceStream.cpp:19:32: error: expected a class or namespace
    if (omtc == SurfaceStream::OMTC::OffMainThread) {

SurfaceStream::OMTC is an enum;  I'm surprised this doesn't fail on other
compilers.
Blocks: 716859
Attachment #716398 - Flags: review?(jgilbert) → review+
https://hg.mozilla.org/mozilla-central/rev/3a4630fa83f7
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: