Bug 843490 - Fix a simple clang 3.2 compile error in gfx/gl/SurfaceStream.cpp.  r=jgilbert.